[tool.poetry]
name = "aggv2sub"
version = "0.0.1"
description = "Aggregate several subscription urls to a single one."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
	{ include = "main.py" },
]

[tool.poetry.scripts]
aggv2sub = 'main:run'

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
